--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - '4306:3306'
     volumes:
       - ./db:/var/lib/mysql
+    networks:
+      - app-net
   php:
     container_name: php
     build:
@@ -24,14 +26,21 @@ services:
       - ./:/var/www/app
     depends_on:
       - database
+    networks:
+      - app-net
   nginx:
     container_name: nginx
     image: nginx:stable-alpine
     ports:
-      - '8080:80'
+      - '8080:8080'
     volumes:
       - ./:/var/www/app
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
       - php
       - database
+    networks:
+      - app-net
+networks:
+    app-net:
+      driver: bridge
