--- a/.env
+++ b/.env
@@ -1,30 +1,20 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-# https://symfony.com/doc/current/configuration/secrets.html
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=d83ab82d9bc82f8c5fdfae3189c11723
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
 DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
+###mysql config###
+MYSQL_ROOT_PASSWORD="password"
+MYSQL_DATABASE="wod_dev"
+MYSQL_USER="admin"
+MYSQL_PASSWORD="admin"
+###mysql config###
+
+###telegram config###
+TELEGRAM_API_TOKEN_DEV=6197075136:AAETqpC8LNiVASrV0gGN0RVIsYfOuRiPnEA
+TELEGRAM_DEBUG_USER_DEV=670407504
+###telegram config###
