--- a/.env
+++ b/.env
@@ -17,4 +17,5 @@ MYSQL_PASSWORD="admin"
 ###telegram config###
 TELEGRAM_API_TOKEN_DEV=6197075136:AAETqpC8LNiVASrV0gGN0RVIsYfOuRiPnEA
 TELEGRAM_DEBUG_USER_DEV=670407504
+TELEGRAM_LOG_BOT_DEV=997130498:AAFOD_Hg7bgzuhehkqWHrWlGFK8aaK1wrxo
 ###telegram config###
