--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ APP_SECRET=d83ab82d9bc82f8c5fdfae3189c11723
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
+DATABASE_URL="mysql://admin:admin@172.19.0.2:3306/wod_dev?serverVersion=8.0"
 ###< doctrine/doctrine-bundle ###
 
 ###mysql config###
