--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: '3.8'
 
 services:
+
   database:
     container_name: database
     image: mysql:8.0
@@ -16,8 +17,9 @@ services:
       - ./db:/var/lib/mysql
     networks:
       - app-net
-  php:
-    container_name: php
+
+  backend:
+    container_name: backend
     build:
       context: ./php-fpm
     ports:
@@ -28,6 +30,7 @@ services:
       - database
     networks:
       - app-net
+
   nginx:
     container_name: nginx
     image: nginx:stable-alpine
@@ -37,10 +40,11 @@ services:
       - ./:/var/www/app
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
-      - php
+      - backend
       - database
     networks:
       - app-net
+
 networks:
     app-net:
       driver: bridge
