--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,7 +11,7 @@ server {
     }
 
     location ~ ^/index\\.php(/|$) {
-        fastcgi_pass php:9000;
+        fastcgi_pass backend:9000;
         fastcgi_split_path_info ^(.+\\.php)(/.*)$;
         include fastcgi_params;
 
